--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,18 @@
 cmake_minimum_required(VERSION 2.6.2)
-project(Rapido)
+
+project(RapidoFSM)
+
 find_package(wxWidgets COMPONENTS core base stc foldbar aui adv REQUIRED)
-
 include( ${wxWidgets_USE_FILE} )
-#include_directories(${wxWidgets_INCLUDE_DIRS} $(PROJECT_SOURCE_DIR)/tinyxml)
-include_directories($(PROJECT_SOURCE_DIR)/tinyxml)
-#add_definitions(${wxWidgets_DEFINITIONS})
 
-# For convenience we define the sources as a variable. You can add 
-# header files and cpp/c files and CMake will sort them out
-set(SRCS
+include_directories($(PROJECT_SOURCE_DIR)/tinyxml)
+
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RapidoFSM_BINARY_DIR}/bin )
+
+add_subdirectory(tinyxml)
+
+
+set(RAPIDO_SOURCES
 	minimal.cpp
 	wxEdit.cpp
 	wxEditGraphNode.cpp
@@ -19,14 +22,12 @@ set(SRCS
 	wxGraphNodeState.cpp
 	wxScriptEditPanel.cpp
 	wxStackedControls.cpp
-	tinyxml/tinyxml.cpp
-	tinyxml/tinystr.cpp
-	tinyxml/tinystr.h
-	tinyxml/tinyxml.h
-	tinyxml/tinyxmlerror.cpp
-	tinyxml/tinyxmlparser.cpp
 	)
 
-add_executable(Rapido ${SRCS})
-target_link_libraries(Rapido ${wxWidgets_LIBRARIES})
+add_executable(rapido ${RAPIDO_SOURCES})
+
+target_link_libraries(rapido
+	${wxWidgets_LIBRARIES}
+	tinyXML
+	)
 
