Include wxFoldbar as a git submodule
* It is not included in wxContrib anymore, and the wxCode version is not
maintained (buildsystem uses deprecated tools)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,18 @@ cmake_minimum_required(VERSION 2.6.2)
 
 project(RapidoFSM)
 
-find_package(wxWidgets COMPONENTS core base stc foldbar aui adv REQUIRED)
+find_package(wxWidgets COMPONENTS core base stc aui adv REQUIRED)
 include( ${wxWidgets_USE_FILE} )
 
-include_directories($(PROJECT_SOURCE_DIR)/tinyxml)
+include_directories("$(PROJECT_SOURCE_DIR)/tinyxml")
+include_directories("$(PROJECT_SOURCE_DIR)/wxFoldbar/include")
 
 add_definitions(-DTINYXML_USE_STL)
 
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RapidoFSM_BINARY_DIR}/bin )
 
 add_subdirectory(tinyxml)
+add_subdirectory(wxFoldbar)
 
 
 set(RAPIDO_SOURCES
@@ -25,12 +27,13 @@ set(RAPIDO_SOURCES
 	src/wxScriptEditPanel.cpp
 	src/wxStackedControls.cpp
 	src/RapidoIO.cpp
-	)
+)
 
-add_executable(rapido ${RAPIDO_SOURCES})
+add_executable(rapido WIN32 ${RAPIDO_SOURCES})
 
 target_link_libraries(rapido
 	${wxWidgets_LIBRARIES}
 	tinyXML
-	)
+	wxFoldbar
+)
 
